--- a/src/layout/BaseLayout/index.scss
+++ b/src/layout/BaseLayout/index.scss
@@ -5,6 +5,7 @@
 
   .menu-container {
     user-select: none;
+
     .logo {
       height: 32px;
       margin: 16px;
@@ -35,7 +36,8 @@
       display: flex;
       flex-direction: column;
 
-      .app-tab-view {
+      .app-breadcrumb {
+        user-select: none;
         width: 100%;
         height: 30px;
         display: flex;
@@ -45,13 +47,19 @@
         border-top: 1px solid #eee;
       }
 
-      .main-container {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        overflow: hidden auto;
-        padding: 10px;
+      .app-main {
+        flex: 1;
+        position: relative;
+
+        .main-container {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          overflow: hidden auto;
+          padding: 10px;
+        }
       }
+
     }
   }
 }
