--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url("https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3453&q=80") fixed no-repeat;
+  background: url('https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3453&q=80')
+    fixed no-repeat;
   background-size: cover;
 
   .login-box {
@@ -21,7 +22,7 @@
     overflow: hidden; /* 隐藏多余的模糊效果 */
 
     &::before {
-      content: "";
+      content: '';
       width: calc(100% + 20px);
       height: calc(100% + 20px);
       position: absolute;
@@ -94,8 +95,9 @@
         outline: 0;
       }
 
-      &::after, &::before {
-        content: "";
+      &::after,
+      &::before {
+        content: '';
         display: block;
         width: 80px;
         height: 100%;
@@ -116,9 +118,6 @@
         opacity: 0;
         filter: blur(5px);
       }
-
-
     }
-
   }
 }
