--- a/src/layout/BaseLayout/index.scss
+++ b/src/layout/BaseLayout/index.scss
@@ -3,61 +3,57 @@
   height: 100vh;
   overflow: hidden;
 
-  .menu-container {
+  .aside-container {
     user-select: none;
-
-    .logo {
-      height: 32px;
-      margin: 16px;
-      background: rgba(255, 255, 255, 0.3);
+    .aside {
+      height: 100vh;
+      overflow-y: auto;
+      .logo {
+        height: 32px;
+        margin: 16px;
+        background: rgba(255, 255, 255, 0.3);
+      }
     }
   }
 
-  .content-container {
-    .app-header {
-      //
-      background-color: #fff;
+  .main-container {
+    .header-container {
+      .header {
+        background-color: #fff;
 
-      .trigger {
-        padding: 0 24px;
-        font-size: 18px;
-        line-height: 64px;
-        cursor: pointer;
-        transition: color 0.3s;
+        .trigger {
+          padding: 0 24px;
+          font-size: 18px;
+          line-height: 64px;
+          cursor: pointer;
+          transition: color 0.3s;
 
-        &:hover {
-          color: #1890ff;
+          &:hover {
+            color: #1890ff;
+          }
         }
       }
     }
-
-    .app-content {
-      position: relative;
+    .app-breadcrumb {
+      user-select: none;
+      width: 100%;
+      height: 30px;
       display: flex;
-      flex-direction: column;
+      align-items: center;
+      padding: 0 10px;
+      background: #fff;
+      border-top: 1px solid #eee;
+    }
+    .content-container {
+      position: relative;
 
-      .app-breadcrumb {
-        user-select: none;
+      .app-content {
+        position: absolute;
         width: 100%;
-        height: 30px;
+        height: 100%;
+        overflow: hidden auto;
+        padding: 10px;
         display: flex;
-        align-items: center;
-        padding: 0 10px;
-        background: #fff;
-        border-top: 1px solid #eee;
-      }
-
-      .app-main {
-        flex: 1;
-        position: relative;
-
-        .main-container {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          overflow: hidden auto;
-          padding: 10px;
-        }
       }
     }
   }
