--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,29 @@ body {
 
 * {
   box-sizing: border-box;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    cursor: pointer;
+    border-radius: 8px;
+    opacity: 0;
+    transition: all 0.3s ease-in;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    opacity: 0;
+  }
+  &:hover {
+    &::-webkit-scrollbar {
+      opacity: 1;
+    }
+    &::-webkit-scrollbar-thumb {
+      opacity: 1;
+      background-color: rgba($color: #fff, $alpha: 0.5);
+    }
+  }
 }
 
 code {
