--- a/src/layout/BaseLayout/index.scss
+++ b/src/layout/BaseLayout/index.scss
@@ -20,30 +20,47 @@
     .header-container {
       .header {
         background-color: #fff;
+        display: flex;
+        justify-content: space-between;
 
-        .trigger {
-          padding: 0 24px;
-          font-size: 18px;
-          line-height: 64px;
-          cursor: pointer;
-          transition: color 0.3s;
+        .header-left,
+        .header-right {
+          display: flex;
+          align-items: center;
+        }
 
-          &:hover {
-            color: #1890ff;
+        .header-left {
+          .app-breadcrumb {
+            user-select: none;
+            width: 100%;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            padding: 0 10px;
+          }
+
+          .menu-trigger {
+            padding: 0 24px;
+            font-size: 18px;
+            line-height: 64px;
+            cursor: pointer;
+            transition: color 0.3s;
+
+            &:hover {
+              color: #1890ff;
+            }
+          }
+        }
+
+        .header-right {
+          .user-area {
+            display: flex;
+            align-items: center;
           }
         }
       }
     }
-    .app-breadcrumb {
-      user-select: none;
-      width: 100%;
-      height: 30px;
-      display: flex;
-      align-items: center;
-      padding: 0 10px;
-      background: #fff;
-      border-top: 1px solid #eee;
-    }
+
     .content-container {
       position: relative;
 
