--- a/src/layout/CardLayout/index.scss
+++ b/src/layout/CardLayout/index.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     height: 36px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 36px;
     display: flex;
     padding: 0 10px;
@@ -33,6 +33,12 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        display: flex;
+        flex-direction: column;
+
+        .table {
+          flex: 1;
+        }
       }
     }
   }
