feat: 无分页有搜索列表

--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -10,7 +10,7 @@
   .search-bar {
     & + .tool-bar {
       padding-top: 10px;
-      // border-top: 1px solid $--border-color;
+      border-top: 1px solid #eaedf1;
     }
 
     .el-form {
