--- a/src/styles/antd.scss
+++ b/src/styles/antd.scss
@@ -2,8 +2,14 @@
   // height: 50px;
 
   .ant-form-item {
-    margin-bottom: 0;
-    height: 48px;
+    margin-right: 10px;
+    margin-bottom: 15px;
+
+    .ant-form-item-explain {
+      position: absolute;
+      font-size: 12px;
+      line-height: 1;
+    }
   }
 }
 
