--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,35 +1,77 @@
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.shadow {
+  box-shadow: 0 2px 10px rgb(94 117 195 / 10%);
+}
+
+.background-color {
+  background-color: #fff;
+}
+
+.padding {
+  padding: 10px;
+}
+
+.card-layout {
+  @extend .background-color;
+  @extend .flex-column;
+  @extend .shadow;
+
+  .header-bar {
+    @extend .flex;
+    height: 36px;
+    font-size: 12px;
+    line-height: 36px;
+    padding: 0 10px;
+    background-color: #f9faff;
+    border-bottom: 1px solid #eaedf1;
+  }
+
+  > .content-area {
+    flex: 1;
+    overflow: auto;
+    padding: 10px;
+  }
+}
+
 .grid-layout {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  padding: 10px;
-  box-shadow: 0 2px 10px rgb(94 117 195 / 10%);
+  @extend .flex;
+  @extend .flex-column;
+  @extend .background-color;
+  @extend .shadow;
+  @extend .padding;
+}
 
-  // 查询栏
-  .search-bar {
-    & + .tool-bar {
-      padding-top: 10px;
-      border-top: 1px solid #eaedf1;
-    }
+// 查询栏
+.search-bar {
+  & + .tool-bar {
+    padding-top: 10px;
+    border-top: 1px solid #eaedf1;
+  }
 
-    .el-form {
-      .el-form-item {
+  .el-form {
+    .el-form-item {
+      margin-right: 10px;
+
+      &:nth-last-child(2) {
         margin-right: 10px;
+      }
 
-        &:nth-last-child(2) {
-          margin-right: 10px;
-        }
-
-        &:last-child {
-          margin-right: 0;
-        }
+      &:last-child {
+        margin-right: 0;
       }
     }
   }
+}
 
-  // 工具栏
-  .tool-bar {
-    padding: 0 0 10px 0;
-  }
+// 工具栏
+.tool-bar {
+  padding: 0 0 10px 0;
 }
