--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -50,6 +50,11 @@ $--mp-size: 10px !default;
     flex: 1;
     overflow: auto;
     padding: 10px;
+
+    > .grid-container {
+      flex: 1;
+      overflow: auto;
+    }
   }
 }
 
@@ -59,6 +64,11 @@ $--mp-size: 10px !default;
   @extend .flex-column;
   @extend .background-color;
   @extend .padding;
+
+  > .grid-container {
+    flex: 1;
+    overflow: auto;
+  }
 }
 
 // 查询栏
@@ -91,6 +101,7 @@ $--mp-size: 10px !default;
 // 分页栏
 .pagination-bar {
   padding: 10px 0 0;
+  text-align: right;
 
   > div {
     padding: 0;
