--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -35,6 +35,7 @@ $--mp-size: 10px !default;
   @extend .background-color;
   @extend .flex-column;
   @extend .flex;
+  @extend .margin;
 
   .header-bar {
     @extend .flex;
@@ -66,6 +67,7 @@ $--mp-size: 10px !default;
   @extend .flex-column;
   @extend .background-color;
   @extend .padding;
+  @extend .margin;
 
   > .grid-container {
     flex: 1;
@@ -127,6 +129,10 @@ $--mp-size: 10px !default;
     overflow: auto;
   }
   & + .content-area {
+    &.grid-layout,
+    &.card-layout {
+      margin: 0 0 0 $--mp-size;
+    }
     margin-left: $--mp-size;
   }
 }
@@ -152,6 +158,7 @@ $--mp-size: 10px !default;
       flex: 1;
       overflow: auto;
       height: 0;
+      margin: 0;
 
       &:not(:first-child) {
         margin-top: $--mp-size;
