--- a/src/layout/BaseLayout/index.scss
+++ b/src/layout/BaseLayout/index.scss
@@ -10,8 +10,15 @@
       overflow-y: auto;
       .logo {
         height: 32px;
+        line-height: 1;
         margin: 16px;
-        background: rgba(255, 255, 255, 0.3);
+        color: #fff;
+        text-align: center;
+        font-size: 30px;
+        opacity: 1;
+        transform: translateX(0);
+        transition: opacity 0.3s ease-in 0.3s;
+        transition: transform 0.3s ease-in 0.3s;
       }
     }
   }
@@ -71,5 +78,12 @@
         overflow: hidden auto;
       }
     }
+  }
+}
+
+.ant-layout-sider-collapsed {
+  .logo {
+    transform: translateX(-500%) !important;
+    opacity: 0 !important;
   }
 }
