--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -167,7 +167,7 @@ $--mp-size: 10px !default;
   }
 }
 
-.app-content {
+.route-tab-pane {
   > .card-layout,
   > .grid-layout {
     @extend .size;
